--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -11,8 +11,8 @@ RUN apt-get update \
 COPY files/bin/entrypoint.sh /bin/entrypoint.sh
 COPY files/ /
 RUN ls /bin
-RUN chmod 755 /bin/entrypoint.sh && chown vagrant:vagrant /bin/entrypoint.sh
-RUN mkdir /var/log/entrypoint && chown vagrant:vagrant /var/log/entrypoint
+#RUN chmod 755 /bin/entrypoint.sh && chown vagrant:vagrant /bin/entrypoint.sh
+#RUN mkdir /var/log/entrypoint && chown vagrant:vagrant /var/log/entrypoint
 
 RUN ls /bin
 
