--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -8,14 +8,14 @@ RUN apt-get update \
  && useradd -m vagrant
 
 
-COPY files/bin/entrypoint.sh /bin/entrypoint.sh
-COPY files/ /
+#COPY files/bin/entrypoint.sh /bin/entrypoint.sh
+#COPY files/ /
 RUN ls
 #RUN chmod 755 /bin/entrypoint.sh && chown vagrant:vagrant /bin/entrypoint.sh
 #RUN mkdir /var/log/entrypoint && chown vagrant:vagrant /var/log/entrypoint
 
 RUN ls /bin
 
-USER vagrant
+#USER vagrant
 
 #ENTRYPOINT ["/bin/entrypoint.sh"]
