--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update \
 
 
 #COPY files/bin/entrypoint.sh /bin/entrypoint.sh
-COPY files/ /
+#COPY files/ /
 RUN ls /
 #RUN chmod 755 /bin/entrypoint.sh && chown vagrant:vagrant /bin/entrypoint.sh
 #RUN mkdir /var/log/entrypoint && chown vagrant:vagrant /var/log/entrypoint
