--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -7,14 +7,12 @@ RUN apt-get update \
  && apt-get install -yq bind9 bind9utils bind9-doc \
  && useradd -m vagrant
 
-
+WORKDIR /
 #COPY files/bin/entrypoint.sh /bin/entrypoint.sh
 COPY files /
 RUN ls /
 #RUN chmod 755 /bin/entrypoint.sh && chown vagrant:vagrant /bin/entrypoint.sh
 #RUN mkdir /var/log/entrypoint && chown vagrant:vagrant /var/log/entrypoint
-
-RUN ls /bin
 
 #USER vagrant
 
