--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update \
 
 WORKDIR /
 #COPY files/bin/entrypoint.sh /bin/entrypoint.sh
-COPY files /
+COPY files/etc/ /etc
 RUN /bin/bash -c find /
 #RUN chmod 755 /bin/entrypoint.sh && chown vagrant:vagrant /bin/entrypoint.sh
 #RUN mkdir /var/log/entrypoint && chown vagrant:vagrant /var/log/entrypoint
