--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update \
 WORKDIR /
 #COPY files/bin/entrypoint.sh /bin/entrypoint.sh
 COPY files/etc/ /etc
+COPY files/bin/ /bin
 RUN /bin/bash -c find /
 #RUN chmod 755 /bin/entrypoint.sh && chown vagrant:vagrant /bin/entrypoint.sh
 #RUN mkdir /var/log/entrypoint && chown vagrant:vagrant /var/log/entrypoint
