--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /
 #COPY files/bin/entrypoint.sh /bin/entrypoint.sh
 COPY files/etc/ /etc
 COPY files/bin/ /bin
-RUN cat /etc/hosts.ext >> /etc/hosts
+RUN cat etc/hosts.ext >> etc/hosts
 RUN /bin/bash -c cat /etc/hosts
 #RUN chmod 755 /bin/entrypoint.sh && chown vagrant:vagrant /bin/entrypoint.sh
 #RUN mkdir /var/log/entrypoint && chown vagrant:vagrant /var/log/entrypoint
