--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update \
 WORKDIR /
 #COPY files/bin/entrypoint.sh /bin/entrypoint.sh
 COPY files/etc/* /etc/
+RUN ls /etc/
 COPY files/bin/* /bin/
 RUN cat etc/hosts.ext >> etc/hosts
 RUN /bin/bash -c cat /etc/hosts
