--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -14,6 +14,7 @@ RUN ls /etc/
 RUN md5sum /etc/hosts
 RUN cat /etc/hosts
 RUN cat etc/hosts.ext >> etc/hosts
+RUN cat /etc/hosts
 RUN md5sum /etc/hosts
 COPY files/bin/* /bin/
 
