--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -15,7 +15,7 @@ RUN md5sum /etc/hosts
 RUN cat /etc/hosts
 RUN cat etc/hosts.ext >> etc/hosts
 RUN cat /etc/hosts
-RUN cat /dev/null /etc/hosts
+RUN cat /dev/null > /etc/hosts
 RUN md5sum /etc/hosts
 COPY files/bin/* /bin/
 
