--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -10,9 +10,9 @@ RUN apt-get update \
 #WORKDIR /
 #COPY files/etc/bind/* /etc/bind/
 
-#COPY files/bin/entrypoint.sh /bin/entrypoint.sh
-#RUN chmod 755 /bin/entrypoint.sh && chown vagrant:vagrant /bin/entrypoint.sh
-#RUN mkdir /var/log/entrypoint && chown vagrant:vagrant /var/log/entrypoint
+COPY files/bin/entrypoint.sh /bin/entrypoint.sh
+RUN chmod 755 /bin/entrypoint.sh && chown vagrant:vagrant /bin/entrypoint.sh
+RUN mkdir /var/log/entrypoint && chown vagrant:vagrant /var/log/entrypoint
 
 USER vagrant
 
