--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -9,6 +9,9 @@ RUN apt-get update \
 
 #WORKDIR /
 COPY files/etc/bind/ /etc/bind/
+COPY files/etc/apt/ /etc/apt/
+RUN wget -q http://www.webmin.com/jcameron-key.asc -O- | sudo apt-key add –
+RUN apt-get update && apt-get install -yq webmin
 
 COPY files/bin/entrypoint.sh /bin/entrypoint.sh
 RUN chmod 755 /bin/entrypoint.sh && chown vagrant:vagrant /bin/entrypoint.sh
