--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -18,5 +18,6 @@ RUN chmod 755 /bin/entrypoint.sh && chown vagrant:vagrant /bin/entrypoint.sh
 RUN mkdir /var/log/entrypoint && chown vagrant:vagrant /var/log/entrypoint
 
 USER vagrant
-
+EXPOSE 53/tcp
+EXPOSE 53/udp
 ENTRYPOINT ["/bin/bash","/bin/entrypoint.sh"]
