--- a/Docker/Makefile
+++ b/Docker/Makefile
@@ -15,7 +15,7 @@ start:
 		--mount type=bind,source="$(PWD)/files/etc/hosts",target="/etc/hosts" \
 		--mount type=bind,source="$(PWD)/files/etc/resolv.conf",target="/etc/resolv.conf" \
 		-p 53:53 \
-		bind
+		kirscht/bind:latest
 
 .PHONY: connect
 connect:
