--- a/named.service/etc/systemd/system/named.service
+++ b/named.service/etc/systemd/system/named.service
@@ -3,7 +3,7 @@ Description=Named
 
 [Service]
 Type=oneshot
-ExecStart=/repos/blueprints/ansible/roles/dns-master/files/startup.script
+ExecStart=/usr/sbin/named
 
 [Install]
 WantedBy=multi-user.target
