--- a/named.service/etc/supervisor/conf.d/named.conf
+++ b/named.service/etc/supervisor/conf.d/named.conf
@@ -2,6 +2,6 @@
 command=bash -c "sudo -E docker run -it --name bind \
 		-p 10.55.55.2:53:53/tcp \
 		-p 10.55.55.2:53:53/udp \
-		galaxy3/bind:latest""
+		galaxy3/bind:latest"
 user=root
 
