--- a/named.service/etc/supervisor/conf.d/named.conf
+++ b/named.service/etc/supervisor/conf.d/named.conf
@@ -1,5 +1,5 @@
 [program:named]
-command=bash -c "sudo -E docker run -it --name bind \
+command=bash -c "docker run -i --name bind \
 		-p 10.55.55.2:53:53/tcp \
 		-p 10.55.55.2:53:53/udp \
 		galaxy3/bind:latest"
