--- a/named.service/etc/supervisor/conf.d/named.conf
+++ b/named.service/etc/supervisor/conf.d/named.conf
@@ -1,7 +1,4 @@
 [program:named]
-command=bash -c "docker run -i --name bind \
-		-p 10.55.55.2:53:53/tcp \
-		-p 10.55.55.2:53:53/udp \
-		galaxy3/bind:latest"
+command=/usr/sbin/named
 user=root
 
